Fixes #187