@@ -4,13 +4,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.11</version>
+		<version>2.5.10</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 	<groupId>nl.sidnlabs</groupId>
 	<artifactId>entrada</artifactId>
-	<version>2.4.3</version>
+	<version>2.4.6</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Convert en enrich DNS data to Parquet format</description>
 	<url>https://github.com/SIDN/entrada</url>
@@ -367,6 +367,30 @@
 				<configuration>
 					<source>17</source>
 					<target>17</target>
+					<compilerArgs>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+
+						<arg>-J--add-opens=java.base/java.security=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=java.base/java.security.cert=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=java.base/java.security.spec=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=java.base/java.util=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=java.base/java.net=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=java.base/sun.security.x509=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=java.base/sun.security.util=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=java.base/javax.security.auth.x500=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=java.base/sun.security.rsa=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.crypto.ec/sun.security.ec=ALL-UNNAMED</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 
